--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
-    <title></title>
+    <title>Git Practice</title>
   </head>
   <body>
     <h1>FirstName LastName</h1>
-<p>I'm learning to code on Codecademy! My goals include:</p>
+<p>I'm learning to code! My goals include:</p>
 <ul>
   <li>Learn to code</li>
   <li>Start a company</li>
